feat: add effector and config for effector env

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "effector": "^23.1.0",
+    "effector-react": "^23.1.0",
     "modern-normalize": "^2.0.0",
+    "patronum": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
