--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "classnames": "^2.5.1",
     "effector": "^23.1.0",
     "effector-react": "^23.1.0",
