--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "atomic-router": "^0.10.0",
+    "atomic-router-react": "^0.9.1",
     "classnames": "^2.5.1",
     "effector": "^23.1.0",
     "effector-react": "^23.1.0",
+    "history": "^5.3.0",
     "modern-normalize": "^2.0.0",
     "patronum": "^2.1.1",
     "react": "^18.2.0",
