--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,26 @@
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
-  "trailingComma": "es5",
-  "bracketSpacing": true
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports"
+  ],
+  "importOrderGroupNamespaceSpecifiers": true,
+  "importOrderParserPlugins": [
+    "typescript",
+    "jsx"
+  ],
+  "importOrderSortSpecifiers": true,
+  "importOrderSeparation": true,
+  "importOrder": [
+    "<THIRD_PARTY_MODULES>",
+    "^@/app(.*)$",
+    "^@/pages(.*)$",
+    "^@/widgets(.*)$",
+    "^@/features(.*)$",
+    "^@/entities(.*)$",
+    "^@/shared(.*)$",
+    "^[./]"
+  ]
 }
